# subsequence-bench

./: .gitignore  CHANGELOG.md  README.md  cabal.project.freeze  subsequence-bench.cabal
bench/: Main.hs
src/: SublistOf.hs  Subsequence.hs
